# dml

./: .gitignore  .mull.yml  AGENTS.md  README.md  meson.build  requirements-dev.txt
.github/workflows/: ci.yml  release-python.yml
docs/: agent_startup_contract.md  architecture.md  dml.1  documentation-guidelines.md  packaging-and-distribution.md
docs/spec/: cli.md  execution-and-remotes.md  execution.md  object-model.md  overview.md  python-bindings.md  remotes.md
include/dml/: dml.h
python/adapters/example/: README.md  pyproject.toml
python/adapters/example/daggerml_adapter_example/: __init__.py  main.py
python/daggerml/: README.md  meson.build  pyproject.toml
python/daggerml-cli/: README.md  pyproject.toml
python/daggerml-cli/daggerml_cli/: __init__.py  main.py
python/daggerml/daggerml/: __init__.py  _core.pyi
python/daggerml/src/: _core_module.c
scripts/: check.sh  commit-msg-hook.sh  init.sh
src/: cli.c  dml.c
subprojects/: lmdb.wrap  xxhash.wrap
subprojects/packagefiles/lmdb/: meson.build
subprojects/packagefiles/xxhash/: meson.build
tests/c/: test_version.c
tests/python/: test_cli_hypothesis.py  test_python_scaffolds.py
